syntax = "proto3";
package mythos.cosmosmod.v1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/msg/v1/msg.proto";
import "amino/amino.proto";
import "cosmos/auth/v1beta1/tx.proto";

option go_package = "mythos/v1/x/cosmosmod/types";
option (gogoproto.goproto_getters_all) = false;

// Msg defines the x/auth Msg service.
service MsgAuth {
    option (cosmos.msg.v1.service) = true;

    // UpdateParams defines a (governance) operation for updating the x/auth module
    // parameters. The authority defaults to the x/gov module account.
    //
    // Since: cosmos-sdk 0.47
    rpc UpdateParams(cosmos.auth.v1beta1.MsgUpdateParams) returns (cosmos.auth.v1beta1.MsgUpdateParamsResponse);
}
