syntax = "proto3";
package mythos.cosmosmod.v1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos/msg/v1/msg.proto";
import "amino/amino.proto";
import "cosmos/gov/v1/tx.proto";

option go_package = "mythos/v1/x/cosmosmod/types";
option (gogoproto.goproto_getters_all) = false;

// MsgGov defines the grpc server for bank
service MsgGov {
    option (cosmos.msg.v1.service) = true;

    // SubmitProposal defines a method to create new proposal given a content.
    rpc SubmitProposal(cosmos.gov.v1.MsgSubmitProposal) returns (cosmos.gov.v1.MsgSubmitProposalResponse);

    // Vote defines a method to add a vote on a specific proposal.
    rpc Vote(cosmos.gov.v1.MsgVote) returns (cosmos.gov.v1.MsgVoteResponse);

    // VoteWeighted defines a method to add a weighted vote on a specific proposal.
    //
    // Since: cosmos-sdk 0.43
    rpc VoteWeighted(cosmos.gov.v1.MsgVoteWeighted) returns (cosmos.gov.v1.MsgVoteWeightedResponse);

    // Deposit defines a method to add deposit on a specific proposal.
    rpc Deposit(cosmos.gov.v1.MsgDeposit) returns (cosmos.gov.v1.MsgDepositResponse);
}

// MsgSubmitProposal the same as govv1.MsgSubmitProposal, except messages are raw bytes
message MsgSubmitProposal {
    option (cosmos.msg.v1.signer) = "proposer";
    option (amino.name)           = "cosmosmod/v1/MsgSubmitProposal";

    // messages are the arbitrary messages to be executed if proposal passes.
    repeated bytes messages = 1;

    // initial_deposit is the deposit value that must be paid at proposal submission.
    repeated cosmos.base.v1beta1.Coin initial_deposit = 2 [
      (gogoproto.nullable)     = false,
      (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
      (amino.dont_omitempty)   = true,
      (amino.encoding)         = "legacy_coins"
    ];

    // proposer is the account address of the proposer.
    string proposer = 3 [(cosmos_proto.scalar) = "cosmos.AddressString"];

    // metadata is any arbitrary metadata attached to the proposal.
    string metadata = 4;

    // title is the title of the proposal.
    //
    // Since: cosmos-sdk 0.47
    string title = 5;

    // summary is the summary of the proposal
    //
    // Since: cosmos-sdk 0.47
    string summary = 6;

    // expedited defines if the proposal is expedited or not
    //
    // Since: cosmos-sdk 0.50
    bool expedited = 7;
}
